Создано с помощью Colaboratory

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOm+5dbocbHybVHeEGFEYTY",
+      "authorship_tag": "ABX9TyPfgAPy62F687FGztayOAgD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "sZ_EOzh6ek0x",
-        "outputId": "63a4bbf2-c8ad-4eed-fe5a-959e5d5d23dc",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -46,7 +45,8 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 55
-        }
+        },
+        "outputId": "63a4bbf2-c8ad-4eed-fe5a-959e5d5d23dc"
       },
       "source": [
         "import re\r\n",
@@ -57,7 +57,7 @@
         "\r\n",
         "files.upload()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -132,7 +132,7 @@
         "    data[\"KEY\"] = get_key(data)\r\n",
         "    return data"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
         "prepared_list = get_even(prepared_list)\r\n",
         "signed_list = get_even(signed_list)\r\n",
         "\r\n",
-        "scopus_and_wos_data = pd.concat([scopus_data_df, wos_data_df])\r\n",
+        "scopus_and_wos_data = pd.concat([wos_data_df, scopus_data_df])\r\n",
         "scopus_and_wos_data.drop_duplicates(subset=[\"KEY\"], inplace=True)\r\n",
         "\r\n",
         "result_df = pd.DataFrame(\r\n",
@@ -169,7 +169,7 @@
         "result_df.drop([\"Title_y\", \"Source Title_y\"], axis=1, inplace=True)\r\n",
         "result_df.to_excel(\"result.xlsx\", index=False)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     }
   ]
