--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfgAPy62F687FGztayOAgD",
+      "authorship_tag": "ABX9TyNTv1oW+jmiK4imRfoi+VOu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,12 +49,12 @@
         "outputId": "63a4bbf2-c8ad-4eed-fe5a-959e5d5d23dc"
       },
       "source": [
-        "import re\r\n",
-        "\r\n",
-        "import pandas as pd\r\n",
-        "\r\n",
-        "from google.colab import files\r\n",
-        "\r\n",
+        "import re\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "from google.colab import files\n",
+        "\n",
         "files.upload()"
       ],
       "execution_count": null,
@@ -100,36 +100,53 @@
         "id": "cuXyIbH5e_nh"
       },
       "source": [
-        "def get_key(data: object) -> list:\r\n",
-        "    title_list = data[\"Title\"].to_list()\r\n",
-        "    result_list = []\r\n",
-        "    for i in title_list:\r\n",
-        "        if isinstance(i, float):\r\n",
-        "            result_list.append(\"NAN\")\r\n",
-        "        else:\r\n",
-        "            result_list.append((re.sub(\"[^А-Яа-яA-Za-z0-9]\", \"\", i)).upper())\r\n",
-        "    return result_list\r\n",
-        "\r\n",
-        "\r\n",
-        "def get_even(list_data: list) -> list:\r\n",
-        "    result_list = []\r\n",
-        "    for i in range(len(list_data)):\r\n",
-        "        if i % 2 != 0:\r\n",
-        "            result_list.append(list_data[i])\r\n",
-        "    return result_list\r\n",
-        "\r\n",
-        "\r\n",
-        "def filter_and_key_scopus(data: object) -> object:\r\n",
-        "    data = data.filter([\"Authors\", \"Title\", \"Source title\",  \"Year\"])\r\n",
-        "    data.rename(columns={\"Source title\": \"Source Title\"}, inplace=True)\r\n",
-        "    data[\"KEY\"] = get_key(data)\r\n",
-        "    return data\r\n",
-        "\r\n",
-        "\r\n",
-        "def filter_and_key_wos(data: object) -> object:\r\n",
-        "    data = data.filter([\"Authors\", \"Article Title\", \"Source Title\", \"Publication Date\", \"Publication Year\"])\r\n",
-        "    data.rename(columns={\"Article Title\": \"Title\", \"Publication Year\": \"Year\"}, inplace=True)\r\n",
-        "    data[\"KEY\"] = get_key(data)\r\n",
+        "def get_key(data: object) -> list:\n",
+        "    \"\"\"\n",
+        "    Функция создает список ключей, ключ состоит из символов алфавита и цифр в\n",
+        "    верхнем регистре\n",
+        "    param: data(DataFrame): Выгрузка в со столбцом KEY\n",
+        "    return: result_list(list): \n",
+        "    \"\"\"\n",
+        "    title_list = data[\"Title\"].to_list()\n",
+        "    result_list = []\n",
+        "    for i in title_list:\n",
+        "        if isinstance(i, float):\n",
+        "            result_list.append(\"NAN\")\n",
+        "        else:\n",
+        "            result_list.append((re.sub(\"[^А-Яа-яA-Za-z0-9]\", \"\", i)).upper())\n",
+        "    return result_list\n",
+        "\n",
+        "\n",
+        "def get_even(list_data: list) -> list:\n",
+        "\n",
+        "    result_list = []\n",
+        "    for i in range(len(list_data)):\n",
+        "        if i % 2 != 0:\n",
+        "            result_list.append(list_data[i])\n",
+        "    return result_list\n",
+        "\n",
+        "\n",
+        "def filter_and_key_scopus(data: object) -> object:\n",
+        "    \"\"\"\n",
+        "    функция фильтрует выгрузку из scopus и добавляет столбец KEY\n",
+        "    param: data(DataFrame): выгрузка из Scopus\n",
+        "    return: data(DataFrame): \n",
+        "    \"\"\"\n",
+        "    data = data.filter([\"Authors\", \"Title\", \"Source title\",  \"Year\"])\n",
+        "    data.rename(columns={\"Source title\": \"Source Title\"}, inplace=True)\n",
+        "    data[\"KEY\"] = get_key(data)\n",
+        "    return data\n",
+        "\n",
+        "\n",
+        "def filter_and_key_wos(data: object) -> object:\n",
+        "    \"\"\"\n",
+        "    функция фильтрует выгрузку из wos и добавляет столбец KEY\n",
+        "    param: data(DataFrame): выгрузка из WoS\n",
+        "    return: data(DataFrame): \n",
+        "    \"\"\"\n",
+        "    data = data.filter([\"Authors\", \"Article Title\", \"Source Title\", \"Publication Date\", \"Publication Year\"])\n",
+        "    data.rename(columns={\"Article Title\": \"Title\", \"Publication Year\": \"Year\"}, inplace=True)\n",
+        "    data[\"KEY\"] = get_key(data)\n",
         "    return data"
       ],
       "execution_count": null,
@@ -141,32 +158,32 @@
         "id": "D41KiegPfBXl"
       },
       "source": [
-        "data_df = pd.read_excel(\"data.xlsx\")\r\n",
-        "wos_data_df = filter_and_key_wos(pd.read_excel(\"WoS2020.xlsx\"))\r\n",
-        "scopus_data_df = filter_and_key_scopus(pd.read_csv(\"scopus2020.csv\"))\r\n",
-        "\r\n",
-        "date_list = data_df[\"Дата создания\"]\r\n",
-        "name_list = data_df[\"Наименование\"]\r\n",
-        "name_book_list = data_df[\"Название журнала\"]\r\n",
-        "prepared_list = data_df[\"Подготовил\"]\r\n",
-        "signed_list = data_df[\"Подписан ЭП\"]\r\n",
-        "\r\n",
-        "date_list = get_even(date_list)\r\n",
-        "name_list = get_even(name_list)\r\n",
-        "name_book_list = get_even(name_book_list)\r\n",
-        "prepared_list = get_even(prepared_list)\r\n",
-        "signed_list = get_even(signed_list)\r\n",
-        "\r\n",
-        "scopus_and_wos_data = pd.concat([wos_data_df, scopus_data_df])\r\n",
-        "scopus_and_wos_data.drop_duplicates(subset=[\"KEY\"], inplace=True)\r\n",
-        "\r\n",
-        "result_df = pd.DataFrame(\r\n",
-        "        {\"Date\": date_list, \"Title\": name_list, \"Source Title\": name_book_list, \"Подготовил\": prepared_list,\r\n",
-        "         \"Подписан\": signed_list})\r\n",
-        "result_df[\"KEY\"] = get_key(result_df)\r\n",
-        "result_df = pd.merge(left=result_df, right=scopus_and_wos_data, left_on=\"KEY\", right_on=\"KEY\")\r\n",
-        "result_df.rename(columns={\"Title_x\": \"Title\", \"Source Title_x\": \"Source Title\"}, inplace=True)\r\n",
-        "result_df.drop([\"Title_y\", \"Source Title_y\"], axis=1, inplace=True)\r\n",
+        "data_df = pd.read_excel(\"data.xlsx\")\n",
+        "wos_data_df = filter_and_key_wos(pd.read_excel(\"WoS2020.xlsx\"))\n",
+        "scopus_data_df = filter_and_key_scopus(pd.read_csv(\"scopus2020.csv\"))\n",
+        "\n",
+        "date_list = data_df[\"Дата создания\"]\n",
+        "name_list = data_df[\"Наименование\"]\n",
+        "name_book_list = data_df[\"Название журнала\"]\n",
+        "prepared_list = data_df[\"Подготовил\"]\n",
+        "signed_list = data_df[\"Подписан ЭП\"]\n",
+        "\n",
+        "date_list = get_even(date_list)\n",
+        "name_list = get_even(name_list)\n",
+        "name_book_list = get_even(name_book_list)\n",
+        "prepared_list = get_even(prepared_list)\n",
+        "signed_list = get_even(signed_list)\n",
+        "\n",
+        "scopus_and_wos_data = pd.concat([wos_data_df, scopus_data_df])\n",
+        "scopus_and_wos_data.drop_duplicates(subset=[\"KEY\"], inplace=True)\n",
+        "\n",
+        "result_df = pd.DataFrame(\n",
+        "        {\"Date\": date_list, \"Title\": name_list, \"Source Title\": name_book_list, \"Подготовил\": prepared_list,\n",
+        "         \"Подписан\": signed_list})\n",
+        "result_df[\"KEY\"] = get_key(result_df)\n",
+        "result_df = pd.merge(left=result_df, right=scopus_and_wos_data, left_on=\"KEY\", right_on=\"KEY\")\n",
+        "result_df.rename(columns={\"Title_x\": \"Title\", \"Source Title_x\": \"Source Title\"}, inplace=True)\n",
+        "result_df.drop([\"Title_y\", \"Source Title_y\"], axis=1, inplace=True)\n",
         "result_df.to_excel(\"result.xlsx\", index=False)"
       ],
       "execution_count": null,
